--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name : Install and Build
-        run : npm Install --legacy-peer-deps && npm run build
+        run : npm install --legacy-peer-deps && npm run build
 
       - name : Deploy
         uses: JamesIves/github-pages-deploy-action@v4
