--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,8 @@ jobs:
       - name : Install and Build
         run : npm install --legacy-peer-deps && npm run build
         
-      - id: deploy
-        name: Deploy to Github Pages
-        uses: fcodelabs/react-deploy-github-pages-action@v1.0.0
+      - name: Deploy🚀
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
+          folder: build
