--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,48 @@ jobs:
       - name : Install and Build
         run : npm install --legacy-peer-deps && npm run build
         
-      - name: Deploy🚀
+name: Github Pages Deploy
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix: 
+        node-version: [18.x]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+
+      - name: Install and Build
+        run: npm install --legacy-peer-deps && npm run build
+
+  deploy:
+    needs: build
+
+    permissions:
+      pages: write
+      id-token: write
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Deploy to GitHub Pages
+        id: deployment
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages
-          folder: build
+          branch: gh-pages  # Asegúrate de cambiarlo si tu rama de despliegue es diferente
+          folder: static  
