--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,8 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
         with:
+    
+          name: gh-pages  # Nombre del artefacto
+          path: static
           token: ${{ secrets.TOKEN_DEPLOY }}  # Utiliza tu nuevo token de acceso personal aquí
 
