--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,21 +24,26 @@ jobs:
         run: |
           npm install --legacy-peer-deps
           npm run build
+      - name : Upload Artifact
+        uses : actions/upload-artifact@v3
+        with:
+          name : production-files
+          path : ./dist
 
 
   deploy:
+    # Add a dependency to the build job
     needs: build
-
+    # Specify runner + deployment step
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      id-token: write
-
     steps:
-   
-      - name: Deploy with gh-pages
-        run: |
-            git remote set-url origin https://git:$(GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-            npm run deploy -- -u "github-actions-bot <support+actions@github.com>"
-        env:
-         GITHUB_TOKEN: ${{ secrets. GITHUB_TOKEN }}
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: production-files
+          path: ./dist
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.TOKEN_DEPLOY }}
+          publish_dir: ./dist
