--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         uses : actions/upload-artifact@v3
         with:
           name : production-files
-          path : ./dist
+          path : ./build
 
 
   deploy:
@@ -39,11 +39,11 @@ jobs:
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v3
-        with:
+        with: 
           name: production-files
-          path: ./dist
+          path: ./build
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.TOKEN_DEPLOY }}
-          publish_dir: ./dist
+          publish_dir: ./build
