--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "miapp",
-  "homepage": "https://Dsniels.github.io/miapp",
+  "homepage": "https://Dsniels.github.io/miapp/Inicio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
