--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "grommet": "^2.36.1",
     "axios": "^0.28.0",
+    "grommet": "^2.36.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.11",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
